--- a/02-tekton-basics/10-pipeline-with-ordered-task.yaml
+++ b/02-tekton-basics/10-pipeline-with-ordered-task.yaml
@@ -16,7 +16,8 @@ spec:
       params:
       - name: text
         value: "Executed after task-A"
-      runAfter: ["task-a"]
+      runAfter:
+        - "task-a"
     - name: task-c
       taskRef:
         name: logger
