--- a/02-tekton-basics/03-task-multi-steps.yaml
+++ b/02-tekton-basics/03-task-multi-steps.yaml
@@ -3,7 +3,7 @@ kind: Task
 metadata:
   name: multiple
 spec:
-  steps:
+  steps:                                  # 多步骤，每一个 step 会启一个 容器 去执行
     - name: first
       image: alpine:3.15
       command:
