--- a/03-tekton-advanced/02-task-with-workspace.yaml
+++ b/03-tekton-advanced/02-task-with-workspace.yaml
@@ -4,19 +4,19 @@ metadata:
   name: source-lister
 spec:
   params:
-  - name: git-repo
-    type: string
-    description: Git repository to be cloned
-  workspaces:
-  - name: source
-  steps:
+  - name: git-repo                            # 参数名
+    type: string                              # 参数类型
+    description: Git repository to be cloned  # 参数描述，没有定义默认值
+  workspaces:                                 # 声明 workspace
+  - name: source                              # workspace 名称，没定义挂载点，默认使用默认挂载点
+  steps:                                      # 在两个 step 之间共享 数据
   - name: git-clone
-    image: alpine/git:v2.36.1
-    script: git clone -v $(params.git-repo) $(workspaces.source.path)/source
+    image: alpine/git:v2.36.1                 # 要在启动一个 alpine/git:v2.36.1 容器 在里面 pull 代码
+    script: git clone -v $(params.git-repo) $(workspaces.source.path)/source  # pull 源码放在 workspace:source 工作空间的 source 目录中
   - name: list-files
     image: alpine:3.16
     command:
     - /bin/sh
     args:
     - '-c'
-    - 'ls $(workspaces.source.path)/source'
+    - 'ls $(workspaces.source.path)/source'   # 这个 step 中也引用了 workspace:source 工作空间
