--- a/03-tekton-advanced/03-pipeline-workspace.yaml
+++ b/03-tekton-advanced/03-pipeline-workspace.yaml
@@ -15,10 +15,10 @@ spec:
     taskRef:
       name: source-lister       # 引用的独立的 task
 
-    workspaces:                 # 引用该 task 时候为该 task 引用一个 workspace
+    workspaces:                 # 引用该 task 时候为该 task 引用 workspace
     - name: source              # task workspace name
       workspace: codebase       # 引用的是 pipeline workspace codebase，
                                 # 运行 pipeline 的时候无法直接给 task 传参数，因此 task 的参数都是引用 pipeline 的
-    params:                     # task 执行所需的参数，必须在 pipeline 中给它传递过去
+    params:                     # 引用该 task 时候，为该 task 引用参数，也是引用的 pipeline 中的参数
     - name: git-repo            # task 参数名
       value: $(params.git-url)  # 引用的参数值是 pipeline:params:git-url
