--- a/03-tekton-advanced/orig/pipelinerun-workspace.yaml
+++ b/03-tekton-advanced/orig/pipelinerun-workspace.yaml
@@ -9,7 +9,7 @@ spec:
   workspaces:
     - name: codebase
   tasks:
-    - name: fetch-from-source
+    - name: fetch-from-source         # 内连定义 task 没有引用外部的 task
       params:
         - name: url
           value: $(params.git-url)
@@ -51,7 +51,7 @@ spec:
       value: https://gitee.com/mageedu/spring-boot-helloWorld.git
   workspaces:                       # workspace 声明
     - name: codebase                # workspace 名称
-      volumeClaimTemplate:          # 卷动态申请模版声明
+      volumeClaimTemplate:          # 动态向 StorageClass:nfs-csi 申请 pvc 持久化存储
         spec:
           accessModes:              # 访问模式
             - ReadWriteOnce         # 以读写方式挂载一次
