--- a/03-tekton-advanced/07-results-demo.yaml
+++ b/03-tekton-advanced/07-results-demo.yaml
@@ -8,7 +8,7 @@ spec:
       description: The version of the application
       type: string
       default: "v0.9"
-  results:
+  results:                                    # 声明 results,Results 用于让 Task 及其 Step 保存执行结果，并可在同一 Pipeline 中的后续 Task 中调用该结果
     - name: datetime
       description: The current date and time
     - name: buildId
@@ -19,11 +19,11 @@ spec:
       script: |
         #!/usr/bin/env bash
         datetime=`date +%Y%m%d-%H%M%S`
-        echo -n ${datetime} | tee $(results.datetime.path)
+        echo -n ${datetime} | tee $(results.datetime.path)  # 引用 results:datetime 文件路经，往里 echo 一个值，想要引用值就用  buildDatetime=`cat $(results.datetime.path)`
     - name: generate-buildid
       image: ikubernetes/admin-box:v1.2
       script: |
         #!/usr/bin/env bash
-        buildDatetime=`cat $(results.datetime.path)`
+        buildDatetime=`cat $(results.datetime.path)`      # 在第2 个 task 中引用，第一个 task 保存的 results:datetime 的值
         buildId=$(params.version)-${buildDatetime}
-        echo -n ${buildId} | tee $(results.buildId.path)
+        echo -n ${buildId} | tee $(results.buildId.path)  # 引用 results:buildId 文件路经，往里 echo 一个值
