--- a/04-tekton-pipeline-in-practise/02-s2i-push-to-dockerhub/01-task-git-clone.yaml
+++ b/04-tekton-pipeline-in-practise/02-s2i-push-to-dockerhub/01-task-git-clone.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: git-clone
+  name: git-clone               # 克隆项目源代码的 task
 spec:
   description: Clone the code repository to the workspace. 
   params:
