--- a/05-tekton-triggers/03-trigger-gitlab/08-gitlab-triggertemplate-s2i.yaml
+++ b/05-tekton-triggers/03-trigger-gitlab/08-gitlab-triggertemplate-s2i.yaml
@@ -3,7 +3,7 @@ kind: TriggerTemplate
 metadata:
   name: s2i-tt
 spec:
-  params:  # 定义参数
+  params:                   # 定义参数 全部引用 TriggerBinding 的参数
   - name: git-revision
   - name: git-repo-url
   - name: image-url
