--- a/05-tekton-triggers/02-trigger-gitlab/02-gitlab-eventlistener-rbac.yaml
+++ b/05-tekton-triggers/02-trigger-gitlab/02-gitlab-eventlistener-rbac.yaml
@@ -11,38 +11,59 @@ metadata:
   name: tekton-triggers-gitlab-minimal
 rules:
   # Permissions for every EventListener deployment to function
-  - apiGroups: ["triggers.tekton.dev"]
-    resources: ["eventlisteners", "triggerbindings", "triggertemplates"]
-    verbs: ["get"]
-  - apiGroups: [""]
+  - apiGroups:                  # 组权限
+      - "triggers.tekton.dev"
+    resources:                  # 资源权限
+      - "eventlisteners"
+      - "triggerbindings"
+      - "triggertemplates"
+    verbs:                      # 执行权限
+      - "get"
+  - apiGroups:
+      - ""
     # secrets are only needed for Github/Gitlab interceptors, serviceaccounts only for per trigger authorization
-    resources: ["configmaps", "secrets", "serviceaccounts"]
-    verbs: ["get", "list", "watch"]
+    resources:
+      - "configmaps"
+      - "secrets"
+      - "serviceaccounts"
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
   # Permissions to create resources in associated TriggerTemplates
-  - apiGroups: ["tekton.dev"]
-    resources: ["pipelineruns", "pipelineresources", "taskruns"]
-    verbs: ["create"]
+  - apiGroups:
+      - "tekton.dev"
+    resources:
+      - "pipelineruns"
+#      - "pipelineresources" # 废弃了
+      - "taskruns"
+    verbs:
+      - "create"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: tekton-triggers-gitlab-binding
-subjects:
+subjects:                                   # 授权主体
   - kind: ServiceAccount
     name: tekton-triggers-gitlab-sa
-roleRef:
+roleRef:                                    # 引用的
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: tekton-triggers-gitlab-minimal
 ---
-kind: ClusterRole
+kind: ClusterRole                           # 集群级别的角色
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tekton-triggers-gitlab-minimal
 rules:
-  - apiGroups: ["triggers.tekton.dev"]
-    resources: ["clusterinterceptors"]
-    verbs: ["get", "list"]
+  - apiGroups:
+      - "triggers.tekton.dev"
+    resources:
+      - "clusterinterceptors"
+    verbs:
+      - "get"
+      - "list"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
