--- a/05-tekton-triggers/03-trigger-gitlab/06-pipeline-source-to-image.yaml
+++ b/05-tekton-triggers/03-trigger-gitlab/06-pipeline-source-to-image.yaml
@@ -20,9 +20,9 @@ spec:
       description: The version of the application
       type: string
       default: "v0.9" 
-    - name: deploy-config-file
+    - name: deploy-config-file        # 部署清单文件名称，最后一步 kubectl apply -f 的文件
       description: The path to the yaml file to deploy within the git source
-      default: all-in-one.yaml
+      default: all-in-one.yaml        # 默认的部署清单 名称
   #results:
   #  - name: datetime
   #    description: The current date and time
